[tool.poetry]
name = "unlinedfunctionalsolidstatedrive"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
werkzeug = "^1.0.1"
marshmallow = "^3.7.1"
aiohttp = "^3.8.5"
typing-extensions = "^3.7.4"
replitdev = "^2.5.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
